<resources>
    <string name="app_name01">AndroidTrainning</string>

    <string name="label_name01">Nombre</string>
    <string name="label_surname01">Apellidos</string>
    <string name="label_age01">Edad</string>
    <string name="action_save01">Guardar</string>
    <string name="action_get01">Recuperar</string>
    <string name="action_clean01">Limpiar</string>

    <string name="app_name">FomApp</string>
    <string name="label_name">Nombre</string>
    <string name="label_surname">Apellidos</string>
    <string name="action_save">Guardar</string>
    <string name="action_clean">Limpiar</string>
    <string name="action_delete">Eliminar</string>

    <string name="action_01_form">Ejercicio 01 Form</string>
    <string name="action_02_form">Ejercicio 02 Form</string>
    <string name="action_03_form">Ejercicio 03 Views</string>
    <string name="action_04_form">Ejercicio 04 View with Glide Loading and Error</string>
    <string name="action_05_styles">Ejercicio 05 Vistas con estilos</string>


    <string name="action_3_1">Vista 1 Hamburguesa</string>
    <string name="action_3_2">Vista 2 Chat</string>
    <string name="action_3_3">Vista 3 Descargas Peliculas</string>
    <string name="action_3_4">Vista 4 Alojamiento</string>
    <string name="action_3_5">Vista 5 Carné Jóven</string>
    <string name="action_3_6">Vista 6 Huellas</string>

    <string name="action_5_1" translatable="false">Vista 1 Audio 21</string>
    <string name="action_5_2" translatable="false">Vista 2 Descuento</string>


    <string name="label_chat1Name">Fin de semana</string>
    <string name="label_chat1Time">9:49</string>


    <string name="label_unknow_error">Error desconocido</string>

    <string name="label_title_viewStyle1">AUDIO 21</string>
    <string name="label_subtitle_viewStyle1" translatable="false">Datos</string>
    <string name="label_factory" translatable="false">Otros Salud y Belleza</string>
    <string name="label_email" translatable="false">Email no diponible</string>
    <string name="label_phone" translatable="false">983154285</string>
    <string name="label_web" translatable="false">https://audio21.es/</string>

    <string name="label_title_viewStyle2" translatable="false">5% de descuento, 15%</string>
    <string name="label_subtitle_viewStyle2" translatable="false">Descuento</string>
    <string name="label_card1" translatable="false">5% de descuento, 15%</string>
    <string name="label_card2" translatable="false">5% de descuento en libreria, 15% Papeleria</string>
    <string name="label_ic_favorite" translatable="false">Favorito</string>
    <string name="label_ic_share" translatable="false">Compartir</string>


</resources>


