<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_surname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_surname"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/action_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_save" />

        <Button
            android:id="@+id/action_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_clean" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_name" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/label_surname" />


    </LinearLayout>

</LinearLayout>