<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.ex02.presentation.Ex02FormActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_surname"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_surname"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp">

        <Button
            android:id="@+id/action_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_save" />

        <Button
            android:id="@+id/action_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_clean"
            android:layout_marginLeft="50dp"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">


        <TextView
            android:id="@+id/label_nameTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/label_surnameTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_nameTittle"
            android:text="@string/label_surname"
            android:layout_marginEnd="30dp"/>


        <TextView
            android:id="@+id/label_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_nameTittle"
            android:layout_alignStart="@id/label_nameTittle"/>

        <TextView
            android:id="@+id/label_surname1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_surnameTittle"
            android:layout_alignStart="@id/label_surnameTittle"/>

        <Button
            android:id="@+id/action_delete1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_surnameTittle"
            android:layout_alignParentEnd="true"
            android:text="@string/action_delete"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/label_id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/label_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_name1"
            android:layout_alignStart="@id/label_name1"/>

        <TextView
            android:id="@+id/label_surname2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_surname1"
            android:layout_alignStart="@id/label_surname1"/>

        <Button
            android:id="@+id/action_delete2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/action_delete1"
            android:layout_alignParentEnd="true"
            android:text="@string/action_delete"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/label_id2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>