<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize" >

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navigationIcon="@drawable/ic_arrow"
                app:title="@string/label_title_viewStyle1"
                style="@style/AppTitle"
                android:elevation="0dp"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginHorizontal="@dimen/spacing_horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/AppBorder_image_view1"
                app:srcCompat="@drawable/ic_view1" />

            <TextView
                android:id="@+id/label_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/AppSubtitle"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="@dimen/spacing_vertical"
                android:text="@string/label_subtitle_viewStyle1"/>

            <androidx.cardview.widget.CardView
                style="@style/CardView"
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/label_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="@dimen/spacing_vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppCardView"
                    android:paddingVertical="@dimen/spacing_vertical"
                    android:paddingHorizontal="@dimen/spacing_horizontal">

                    <TextView
                        android:id="@+id/label_factory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/AppTextCard"
                        android:drawableStart="@drawable/ic_factory"
                        android:text="@string/label_factory"/>

                    <TextView
                        android:id="@+id/label_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/label_factory"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:drawableStart="@drawable/ic_email"
                        style="@style/AppTextCard"
                        android:text="@string/label_email"
                        android:layout_marginVertical="@dimen/spacing_vertical"/>

                    <TextView
                        android:id="@+id/label_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/label_email"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/AppTextCard"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawableEnd="@drawable/ic_load"
                        android:text="@string/label_phone"
                        android:layout_marginVertical="@dimen/spacing_vertical"/>

                    <TextView
                        android:id="@+id/label_web"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/AppTextCard"
                        app:layout_constraintTop_toBottomOf="@id/label_phone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:drawableStart="@drawable/ic_web"
                        android:drawableEnd="@drawable/ic_load"
                        android:text="@string/label_web"
                        android:layout_marginVertical="@dimen/spacing_vertical"/>

                </androidx.constraintlayout.widget.ConstraintLayout>



            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>